--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
         objective is to become the best developer that I can contribute to the
         tech industries .
       </p>
-      <div class="email" href="mailto:abhinavkumar@techis.io">abhinavkumar@techis.io</div>
+      <div class="email">
+        <a href="mailto : abhinavkumar@techis.io"> abhinavkumar@techis.io </a>
+      </div>
       <div class="icons">
         <a href="https://github.com/Abhinav8960"
           ><i class="bi bi-github"></i
